; ModuleID = '/home/carl/AnghaBench/tmux/extr_layout.c_layout_close_pane.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_layout.c_layout_close_pane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_pane = type { i32, %struct.window* }
%struct.window = type { i32* }

@.str = private unnamed_addr constant [22 x i8] c"window-layout-changed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @layout_close_pane(%struct.window_pane* %0) #0 {
  %2 = alloca %struct.window_pane*, align 8
  %3 = alloca %struct.window*, align 8
  store %struct.window_pane* %0, %struct.window_pane** %2, align 8
  %4 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %5 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %4, i32 0, i32 1
  %6 = load %struct.window*, %struct.window** %5, align 8
  store %struct.window* %6, %struct.window** %3, align 8
  %7 = load %struct.window*, %struct.window** %3, align 8
  %8 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %9 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.window*, %struct.window** %3, align 8
  %12 = getelementptr inbounds %struct.window, %struct.window* %11, i32 0, i32 0
  %13 = call i32 @layout_destroy_cell(%struct.window* %7, i32 %10, i32** %12)
  %14 = load %struct.window*, %struct.window** %3, align 8
  %15 = getelementptr inbounds %struct.window, %struct.window* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %23

18:                                               ; preds = %1
  %19 = load %struct.window*, %struct.window** %3, align 8
  %20 = call i32 @layout_fix_offsets(%struct.window* %19)
  %21 = load %struct.window*, %struct.window** %3, align 8
  %22 = call i32 @layout_fix_panes(%struct.window* %21)
  br label %23

23:                                               ; preds = %18, %1
  %24 = load %struct.window*, %struct.window** %3, align 8
  %25 = call i32 @notify_window(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), %struct.window* %24)
  ret void
}

declare dso_local i32 @layout_destroy_cell(%struct.window*, i32, i32**) #1

declare dso_local i32 @layout_fix_offsets(%struct.window*) #1

declare dso_local i32 @layout_fix_panes(%struct.window*) #1

declare dso_local i32 @notify_window(i8*, %struct.window*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
